--- a/style.css
+++ b/style.css
@@ -2,13 +2,30 @@ html {
     background-color: rgb(31, 31, 31);
 }
 #gameArea {
-    width: 1000px;
-    height: 600px;
+    width: 99vw;
+    height: 99vh;
     border-style: solid;
     border-color: white;
     border-width: 3px;
     background-color: black;
     position: absolute;
-    left: 21%;
-    top: 10%;
+    left: 0px;
+    top: 0px;
 }
+
+#gameOver{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    background-color: violet;
+}
+
+#container{
+    position: relative;
+}
+
+
+
+
